# cgagent

./: .env  .gitignore  README.md  agent_framework.db  config.example.yaml  pyproject.toml
agent/: config.py  config.yaml  config_loader.py  context.py  coordinator.py  coordinator_v2.py  errors.py  llm_base.py  llm_client.py  planner.py  replanner.py  scratchpad.py  skill_executor.py  synthesizer.py  token_budget.py  tools.py  yaml_settings.py
agent/connectors/: __init__.py  base.py  database.py  http.py
agent/core/: __init__.py  base_skill.py  context_manager.py  interfaces.py  skill_registry.py
agent/intelligence/: __init__.py  intent_classifier.py  semantic_layer.py  slot_filler.py
agent/langchain/: llm.py  prompt.py  refine.py  reflection.py
agent/mcp/: mcptools.py
agent/memory/: __init__.py  config.py  long_term_memory.py  memory_manager.py  message_processing.py  message_store.py  prompt.py  queue.py  redis_memory.py  storage.py  updater.py  user_profile.py  working_memory.py
agent/modes/: __init__.py  common.py  flash.py
agent/providers/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py  zhipu_provider.py
agent/sql/: pgsql.py
app/gateway/: app.py  auth.py  config.py  database.py  exceptions.py  middleware.py  models.py  schemas.py
skills/assess_risk/: SKILL.md  executor.py  schema.py
skills/device-healthy/: SKILL.md
skills/ecommerce_recommendation/: SKILL.md  executor.py  schema.py
skills/generate_advice/: SKILL.md  executor.py  schema.py
utils/: __init__.py  skill_loader.py  skill_registry.py
(+15 files in other folders)
