[project]
name = "cgagent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness[ollama]",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "redis>=8.0.1",
    "langgraph-sdk>=0.1.51",
    "sqlalchemy[asyncio]>=2.0.25",
    "sqlalchemy",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.19",
]


[tool.uv]
index-url = "https://pypi.org/simple"


#[tool.uv.workspace]
#members = ["packages/harness"]

#[tool.uv.sources]
#deerflow-harness = { workspace = true }
